--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <title>Nuruzzaman portfolio</title>
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="hafe">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Nuruzzaman</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, <br> stopping trains. But nobody pays me a dime for that work.<br>  That's why I am learning and mastering web development. <br> I will not stop until I become the Web Development Hero.</p>
+            <a class="button" href="https://www.linkedin.com/in/md-nuruzzaman-4ab88b205/"target="_blank">HIRE ME</a>
+        </div>
+        <div class="hafe">
+            <img src="images/my-bg.jpg" alt="image">
+        </div>
+    </section>    
 </body>
 </html>
