--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         <div class="hafe">
             <img src="images/my-bg.jpg" alt="image">
         </div>
+    </section>
+
+    <section class="big">
+        <div class="hafe">
+            <img src="images/my-bg2.jpg" alt="image">
+        </div>
+        <div class="hafe">
+            <h1>Dream Big</h1>
+            <h1>Become a web developer</h1>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button" href="https://www.facebook.com/nuruzzaman.shah.374/"target="_blank">DOWNLOAD RESUME</a>
+        </div>
     </section>    
 </body>
 </html>
