--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Nuruzzaman portfolio</title>
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner contener">
         <div class="hafe">
             <h1>Welcome To</h1>
             <h1><span class="orange">Nuruzzaman</span> World!</h1>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="big">
+    <section class="big contener">
         <div class="hafe">
             <img src="images/my-bg2.jpg" alt="image">
         </div>
@@ -35,5 +35,25 @@
             <a class="button" href="https://www.facebook.com/nuruzzaman.shah.374/"target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>    
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="contener">
+            <div class="item">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="orange">2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="item" id="web">
+                <h1>Baby Web Developer</h1>
+                <h2 class="orange">2020-2021 | Programming Hero Learner</h2>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
